gateway-demo/manifests/load-balance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: load-balance
  labels:
    name: load-balance
