gateway-demo/manifests/load-balance/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproute-to-service
  namespace: default  # The namespace of the target service
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: traefik  # The namespace where your HTTPRoute is
  to:
  - group: ""
    kind: Service
