gateway-demo/manifests/load-balance/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: load-balance-route
  namespace: traefik
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - load-balance.example
  rules:
  - backendRefs:
    - name: my-app
      port: 80
      namespace: default
